clusters/jatek/capacitor.yml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: capacitor-ingress
  namespace: flux-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: capacitor
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: ingress-internal-nginx
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy-gateway-system
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: capacitor
  namespace: flux-system
spec:
  parentRefs:
    - name: eg-internal
      namespace: envoy-gateway-system
  hostnames:
    - "capacitor.kvlk.local"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: capacitor
          port: 9000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capacitor-ingress
  namespace: flux-system
  annotations:
    cert-manager.io/cluster-issuer: "custom-ca-issuer"
    nginx.ingress.kubernetes.io/server-snippet: |
      if ($scheme = http) {
        return 301 https://$host:8443$request_uri;
      }
spec:
  ingressClassName: nginx-internal
  tls:
    - hosts:
        - capacitor.kvlk.local
      secretName: capacitor-tls
  rules:
    - host: capacitor.kvlk.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: capacitor
                port:
                  number: 9000
